[+] Se añade comentario de escenario.

--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -292,7 +292,7 @@
               <p class="mas-info" onclick="howToUse('suggested')">¿Cómo se utiliza?</p>
 
               <div id="suggested-list"></div>
-
+              <div id="suggested-escenario"></div>
               <div class="canvas-suggested-display">
                 <div class="suggested-planta">
                   <h2><i>Planta</i></h2>
