--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="resources/objects/room.js"></script>
     <script type="text/javascript" src="resources/objects/object.js"></script>
     <script type="text/javascript" src="resources/values/valuesConst.js"></script>
+    <script type="text/javascript" src="resources/test/getShortListOfPointsTest.js"></script>
   </head>
 
   <body onload="myCanvas()">
