[~] Corrección de datos.

--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -67,7 +67,7 @@
             <li>Cálculo de la distancia mínima.</li>
               <p class="description-text">
                 Con ella, podrás calcular de la distancia mínima a la que deben
-                situarse la fuente y el micrófono para realizar una medición. Además
+                situarse la fuente sonora y el micrófono para realizar una medición. Además
                 podrás comprobar si la posición desde la que vas a realizar la medición
                 es correcta o no. Esta herramienta ha sido diseñada cumpliendo la normativa
                 UNE-ISO 3382.
@@ -86,7 +86,7 @@
                 <p class="description-text mas-info mas-info-menu" onclick="howToUse('dimensions')">Más información sobre las dimensiones de la sala.</p>
                 <li>Tiempo de reverberación esperado en la sala, en segundos.</li>
                 <p class="description-text mas-info mas-info-menu" onclick="howToUse('reverberation')">Más información sobre el T.R esperado.</p>
-                <li>Posición de la fuente, en metros.</li>
+                <li>Posición de la fuente sonora, en metros.</li>
                 <li>Posición del micrófono, en metros.</li>
                 <p class="description-text mas-info mas-info-menu" onclick="howToUse('distance')">Más información sobre el cálculo de las posiciones</p>
               </ol>
