[+] Añadidos mensajes de coeficientes medios de absorció.

--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -114,8 +114,8 @@
                 <p class="description-text mas-info mas-info-menu" onclick="howToUse('dimensions')">Más información sobre las dimensiones de la sala.</p>
                 <li>Coeficientes de absorción de las superficies de la sala: techo,
                   suelo y paredes.</li>
-                <p class="description-text mas-info mas-info-menu" onclick="howToUse('coeficients-mean')">Más información sobre el cálculo del T.R. medio.</p>
-                <p class="description-text mas-info mas-info-menu" onclick="howToUse('coeficients-octaves')">Más información sobre el cálculo del T.R. por octavas.</p>
+                <p class="description-text mas-info mas-info-menu" onclick="howToUse('coefficients-mean')">Más información sobre el cálculo del T.R. medio.</p>
+                <p class="description-text mas-info mas-info-menu" onclick="howToUse('coefficients-octaves')">Más información sobre el cálculo del T.R. por octavas.</p>
               </ol>
               <br>
             <li>Base de datos de materiales</li>
@@ -397,7 +397,7 @@
                   </table>
                 <button class="reset-button" onclick="clearCoef()">limpiar valores</button>
                 <div class="empty"></div>
-                <p class="mas-info" onclick="howToUse('coeficients-mean')">¿Cómo se utiliza?</p>
+                <p class="mas-info" onclick="howToUse('coefficients-mean')">¿Cómo se utiliza?</p>
               </div>
             </div>
             <div class="empty"></div>
@@ -590,7 +590,7 @@
                 </table>
                 <button class="reset-button" onclick="clearOctaves()">limpiar valores</button>
                 <div class="empty"></div>
-                <p class="mas-info" onclick="howToUse('coeficients-octaves')">¿Cómo se utiliza?</p>
+                <p class="mas-info" onclick="howToUse('coefficients-octaves')">¿Cómo se utiliza?</p>
               </div>
               <div align="center">
                 <a href="#mark-list-octaves">
@@ -606,6 +606,7 @@
               <div id="mark-list-octaves"></div>
               <div id="rever-octaves-table"></div>
               <div id="put-octaves-schroeder"></div>
+              <div id="coef-list"></div>
               <div class="empty"></div>
               <div class="canvas-rever-display">
                 <div class="display-octaves">
