[~] Cambio nombre de botón.

--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
-    <meta charset="utf-8" name="program" content="width=device-width, initial-scale=1">
+    <!-- <meta  content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" charset="utf-8" name="program" content="width=device-width, initial-scale=1.0"></meta>
     <link rel="stylesheet" href="resources/style/style.css">
     <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Big Shoulders Display' rel='stylesheet'>
@@ -17,7 +18,6 @@
     <script type="text/javascript" src="resources/objects/room.js"></script>
     <script type="text/javascript" src="resources/objects/object.js"></script>
     <script type="text/javascript" src="resources/values/valuesConst.js"></script>
-    <script type="text/javascript" src="resources/test/getShortListOfPointsTest.js"></script>
   </head>
 
   <body onload="myCanvas()">
@@ -289,7 +289,7 @@
                 </div>
               </details>
 
-              <button class="menu-button" onclick="optionGetShortList()"><a>Obtener terna de puntos</a></button>
+              <button class="menu-button" onclick="optionGetShortList()"><a>Obtener sugerencia de puntos</a></button>
               <p class="mas-info" onclick="howToUse('suggested')">¿Cómo se utiliza?</p>
 
               <div id="suggested-list"></div>
@@ -623,7 +623,7 @@
       <div id="mark-materials"></div>
 
       <div id="materials">
-      <h3 class="content-title">Tablas de materiales</h3>
+      <h3 class="content-title">Búsqueda de materiales</h3>
       <div class="contenedor-principal">
         <details class="how-area info-material">
           <summary>i</summary>
