[+] Arreglado Menú y referencia añadida.

--- a/acoustic-multitool.html
+++ b/acoustic-multitool.html
@@ -38,7 +38,7 @@
         <a class="sidebar-button" href="#mark-distance">distancia mínima</a>
         <a class="sidebar-button" href="#mark-reverberation">tiempo de reverberación</a>
         <a class="sidebar-button" href="#mark-materials">búsqueda de materiales</a>
-        <a class="sidebar-button" href="#about">contato</a>
+        <a class="sidebar-button" href="#about">contacto</a>
       </div>
     </div>
 
@@ -635,6 +635,11 @@
               Las búsquedas pueden realizarse en función del nombre de material,
               así como por su NRC (Noise Reduction Coeficient) o por su α medio (Coeficiente
               de Absorción Medio).
+
+              Esta base de datos ha sido posible gracias al Centro de Investigación
+              y Transferencia en Acústica (CINTRA), UA CONICET –
+              Universidad Tecnológica Nacional, Facultad Regional Córdoba.
+              Revisión 1.1 (May-2015, MFP/MSD/SPF).
             </p>
           </div>
         </details>
